unpackaged/objects/ServiceCloudReason__mdt.object
<CustomObject>
  <description>Used to show specific fields based on the selected Category/Reason</description>
  <fields>
    <fullName>Article_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Article_Number__c</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Complaint_Category__c</fullName>
    <label>Complaint_Category__c</label>
    <length>254</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Credit_Rebill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit_Rebill__c</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Invoice_number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice_number__c</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>New_or_Replacement_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New_or_Replacement_Order__c</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Order_number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order_number__c</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Return_Tracking_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return_Tracking_Number__c</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Tracking_number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracking_number__c</label>
    <type>Checkbox</type>
  </fields>
  <label>Service Cloud Reason</label>
  <pluralLabel>Service Cloud Reasons</pluralLabel>
</CustomObject>